--- a/openApiDocs/beta/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/beta/Devices.ServiceAnnouncement.yml
@@ -118,6 +118,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceAnnouncement'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -309,6 +313,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceHealth'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -582,6 +590,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceHealthIssue'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -659,6 +671,42 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: function
+  '/admin/serviceAnnouncement/healthOverviews/{serviceHealth-id}/issues/$count':
+    get:
+      tags:
+        - admin.serviceAnnouncement
+      summary: Get the number of the resource
+      operationId: admin.serviceAnnouncement.healthOverview.issue_GetCount
+      parameters:
+        - name: serviceHealth-id
+          in: path
+          description: The unique identifier of serviceHealth
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: serviceHealth
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+      responses:
+        2XX:
+          $ref: '#/components/responses/ODataCountResponse'
+        default:
+          $ref: '#/components/responses/error'
+  /admin/serviceAnnouncement/healthOverviews/$count:
+    get:
+      tags:
+        - admin.serviceAnnouncement
+      summary: Get the number of the resource
+      operationId: admin.serviceAnnouncement.healthOverview_GetCount
+      parameters:
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+      responses:
+        2XX:
+          $ref: '#/components/responses/ODataCountResponse'
+        default:
+          $ref: '#/components/responses/error'
   /admin/serviceAnnouncement/issues:
     get:
       tags:
@@ -873,6 +921,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceHealthIssue'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -934,6 +986,20 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: function
+  /admin/serviceAnnouncement/issues/$count:
+    get:
+      tags:
+        - admin.serviceAnnouncement
+      summary: Get the number of the resource
+      operationId: admin.serviceAnnouncement.issue_GetCount
+      parameters:
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+      responses:
+        2XX:
+          $ref: '#/components/responses/ODataCountResponse'
+        default:
+          $ref: '#/components/responses/error'
   /admin/serviceAnnouncement/messages:
     get:
       tags:
@@ -1156,6 +1222,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceUpdateMessage'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1396,6 +1466,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceAnnouncementAttachment'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -1505,9 +1579,35 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.serviceAnnouncementAttachment'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
+  '/admin/serviceAnnouncement/messages/{serviceUpdateMessage-id}/attachments/$count':
+    get:
+      tags:
+        - admin.serviceAnnouncement
+      summary: Get the number of the resource
+      operationId: admin.serviceAnnouncement.message.attachment_GetCount
+      parameters:
+        - name: serviceUpdateMessage-id
+          in: path
+          description: The unique identifier of serviceUpdateMessage
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: serviceUpdateMessage
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+      responses:
+        2XX:
+          $ref: '#/components/responses/ODataCountResponse'
+        default:
+          $ref: '#/components/responses/error'
   '/admin/serviceAnnouncement/messages/{serviceUpdateMessage-id}/attachmentsArchive':
     get:
       tags:
@@ -1567,6 +1667,20 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
+  /admin/serviceAnnouncement/messages/$count:
+    get:
+      tags:
+        - admin.serviceAnnouncement
+      summary: Get the number of the resource
+      operationId: admin.serviceAnnouncement.message_GetCount
+      parameters:
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+      responses:
+        2XX:
+          $ref: '#/components/responses/ODataCountResponse'
+        default:
+          $ref: '#/components/responses/error'
   /admin/serviceAnnouncement/messages/microsoft.graph.archive:
     post:
       tags:
@@ -5317,6 +5431,9 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    ODataCountResponse:
+      type: integer
+      format: int32
     microsoft.graph.serviceUpdateMessageCollectionResponse:
       title: Collection of serviceUpdateMessage
       type: object
@@ -5444,6 +5561,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/microsoft.graph.serviceHealthIssueCollectionResponse'
+    ODataCountResponse:
+      description: The count of the resource
+      content:
+        text/plain:
+          schema:
+            $ref: '#/components/schemas/ODataCountResponse'
     microsoft.graph.serviceUpdateMessageCollectionResponse:
       description: Retrieved collection
       content:
