--- a/openApiDocs/v1.0/Compliance.yml
+++ b/openApiDocs/v1.0/Compliance.yml
@@ -60,6 +60,10 @@ paths:
       responses:
         2XX:
           description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.compliance'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
