--- a/openApiDocs/v1.0/Users.Functions.yml
+++ b/openApiDocs/v1.0/Users.Functions.yml
@@ -1002,7 +1002,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: user.calendarGroup.calendarView.instance_delta
+      operationId: user.calendarGroup.calendar.calendarView.instance_delta
       parameters:
         - name: user-id
           in: path
@@ -1228,7 +1228,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: user.calendarGroup.calendarView_delta
+      operationId: user.calendarGroup.calendar.calendarView_delta
       parameters:
         - name: user-id
           in: path
@@ -1446,7 +1446,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: user.calendarGroup.event.instance_delta
+      operationId: user.calendarGroup.calendar.event.instance_delta
       parameters:
         - name: user-id
           in: path
@@ -1672,7 +1672,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/event-delta?view=graph-rest-1.0
-      operationId: user.calendarGroup.event_delta
+      operationId: user.calendarGroup.calendar.event_delta
       parameters:
         - name: user-id
           in: path
@@ -1886,7 +1886,7 @@ paths:
       tags:
         - users.Functions
       summary: Invoke function allowedCalendarSharingRoles
-      operationId: user.calendarGroup_allowedCalendarSharingRoles
+      operationId: user.calendarGroup.calendar_allowedCalendarSharingRoles
       parameters:
         - name: user-id
           in: path
@@ -3714,7 +3714,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/contact-delta?view=graph-rest-1.0
-      operationId: user.contactFolder.childFolder_delta
+      operationId: user.contactFolder.childFolder.contact_delta
       parameters:
         - name: user-id
           in: path
@@ -4015,7 +4015,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/contact-delta?view=graph-rest-1.0
-      operationId: user.contactFolder_delta
+      operationId: user.contactFolder.contact_delta
       parameters:
         - name: user-id
           in: path
@@ -9991,7 +9991,7 @@ paths:
       tags:
         - users.Functions
       summary: Invoke function preview
-      operationId: user.onenote.notebook.sectionGroup.page_preview
+      operationId: user.onenote.notebook.sectionGroup.section.page_preview
       parameters:
         - name: user-id
           in: path
@@ -10181,7 +10181,7 @@ paths:
       tags:
         - users.Functions
       summary: Invoke function preview
-      operationId: user.onenote.sectionGroup.page_preview
+      operationId: user.onenote.sectionGroup.section.page_preview
       parameters:
         - name: user-id
           in: path
@@ -14559,18 +14559,22 @@ components:
         lastNonInteractiveSignInDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: 'The last non-interactive sign-in date for a specific user. You can use this field to calculate the last time a client signed in to the directory on behalf of a user. Because some users may use clients to access tenant resources rather than signing into your tenant directly, you can use the non-interactive sign-in date to along with lastSignInDateTime to identify inactive users. The timestamp represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is: ''2014-01-01T00:00:00Z''. Azure AD maintains non-interactive sign-ins going back to May 2020. For more information about using the value of this property, see Manage inactive user accounts in Azure AD.'
           format: date-time
           nullable: true
         lastNonInteractiveSignInRequestId:
           type: string
+          description: Request identifier of the last non-interactive sign-in performed by this user.
           nullable: true
         lastSignInDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: 'The last interactive sign-in date and time for a specific user. You can use this field to calculate the last time a user signed in to the directory with an interactive authentication method. This field can be used to build reports, such as inactive users. The timestamp represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is: ''2014-01-01T00:00:00Z''. Azure AD maintains interactive sign-ins going back to April 2020. For more information about using the value of this property, see Manage inactive user accounts in Azure AD.'
           format: date-time
           nullable: true
         lastSignInRequestId:
           type: string
+          description: Request identifier of the last interactive sign-in performed by this user.
           nullable: true
       additionalProperties:
         type: object
